--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=3100103
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.main.allow-circular-references=true
 
